about testimonial overflow issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -604,7 +604,7 @@ h6 {
 
 #bg-video{
   position: absolute;
-  width: 100vw;
+  width: 100%;
 }
 .about .content h2 {
   font-weight: 700;
